src/test/ui/feature-gates/feature-gate-log_syntax2.stderr
error[E0658]: `log_syntax!` is not stable enough for use and is subject to change
  --> $DIR/feature-gate-log_syntax2.rs:4:22
   |
LL |     println!("{:?}", log_syntax!());
   |                      ^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29598
   = help: add #![feature(log_syntax)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
