src/test/ui/feature-gates/feature-gate-log_syntax2.rs
// gate-test-log_syntax

fn main() {
    println!("{:?}", log_syntax!()); //~ ERROR `log_syntax!` is not stable
}
